# streadmilla

./: .gitignore  Makefile  README.md  build.zig  build.zig.zon  dune-project
.github/workflows/: build-and-test.yaml  build-and-test.yml
example_stella/: try_out.c
lib/: dune  example.ml
src/: collector.zig  gc.zig  main.zig  memory.zig  root.zig  stats.zig  util.zig
stella/: dune  gc.c  gc.ml
test/: dune
